--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="assets/css/style.css" rel="stylesheet">
         <link href="assets/css/style-responsive.css" rel="stylesheet">
         <link href="components/sweetalert/dist/sweetalert.css" rel="stylesheet">
+        <link href="components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css" rel="stylesheet">
     </head>
 
     <body ng-app="mobile_parking">
@@ -46,13 +47,16 @@
         <script src="components/angular/angular-resource.min.js"></script>
         <script src="components/angular-animate/angular-animate.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/jquery-ui-1.9.2.custom.min.js"></script>
-        <script src="assets/js/jquery.ui.touch-punch.min.js"></script>
+        <script src="components/DataTables/datatables.min.js"></script>
+        <script src="components/angular-datatables/dist/angular-datatables.min.js"></script>
+        <script src="components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.min.js"></script>
         
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/HomeControllers.js"></script>
         <script src="scripts/services/HomeServices.js"></script>
         
+        <script src="assets/js/jquery-ui-1.9.2.custom.min.js"></script>
+        <script src="assets/js/jquery.ui.touch-punch.min.js"></script>
         <script class="include" type="text/javascript" src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
         <script src="assets/js/jquery.scrollTo.min.js"></script>
         <script src="assets/js/jquery.nicescroll.js" type="text/javascript"></script>
